<resources>
    <string name="app_name">Teaching Android</string>
    <string name="hello_android">Hello Android!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="name">Please enter your name:</string>
    <string name="add_item">Add Item</string>
    <string name="enter_new_todo_item">Enter new Todo item:</string>
    <string name="todo_item_must_have_text">Todo items must not be blank!</string>
    <string name="cancel">Cancel</string>
    <string name="show_the_list">Show me the list!</string>
</resources>
